[package]
name = "bio_apis"
version = "0.1.6"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "DNA and RNA sequence types and functions"
keywords = ["dna", "primer", "biology", "pcr"]
categories = [
    "science", "science::bioinformatics", "api-bindings"
]
repository = "https://github.com/David-OConnor/bio_apis"
documentation = "https://docs.rs/bio_apis"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
ureq = "3.0.12"
url = "2.5.4"
webbrowser = "1.0.4"
na_seq = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde-aux = "4.7.0"  # Deser num from string.

# For loading a semi-random new protein.
rand = "0.9.1"
# We use this for decompressing downloaded CIF files.
flate2 = "1.1.1"
# For serializing. Useful if storing these to file by the application.
bincode = { version = "2.0.1", optional = true }


[features]
encode = ["bincode"]